--- a/app/views/demo/index.html.erb
+++ b/app/views/demo/index.html.erb
@@ -1,3 +1,7 @@
 <h1>Demo#index</h1>
-<h3>Hello world!</h3>
+<h3>Hello from Index!</h3>
 
+
+<a href="/demo/hello">Hello page 1 </a><br>
+<%= link_to('Hello page 2',{:action => 'hello'}) %> <br>
+<%= link_to('Hello with parameters', {:action => 'hello',:page => 5, :id =>20}) %>
